# awesome-dockerfiles

./: CONTRIBUTING.md  LICENSE  README.md  renovate.json
.github/: CODEOWNERS
.github/workflows/: ci.yml  main.yml
angular/: Dockerfile  README.md  package-lock.json  package.json
astro/: README.md  package-lock.json  package.json
express/: Dockerfile  package-lock.json  package.json
express-yarn/: Dockerfile  package.json
express/express-npm/: Dockerfile  README.md  package-lock.json  package.json
express/express-pnpm/: Dockerfile  README.md  package.json  pnpm-lock.yaml
express/express-yarn/: Dockerfile  README.md  package.json
go/: Dockerfile  README.md  go.mod  go.sum  main.go
hono/: Dockerfile  README.md  package-lock.json  package.json  tsconfig.json
java/spring-boot/: .dockerignore  Dockerfile  README.md  pom.xml
nestjs/: .gitignore  Dockerfile  README.md  package.json  tsconfig.json
next/: Dockerfile  README.md  eslint.config.mjs  package-lock.json  package.json
nuxt/: Dockerfile  nuxt.config.ts  package-lock.json  package.json
php/laravel/: .dockerignore  .env.example  Dockerfile  README.md  composer.json  package-lock.json
php/symfony/: .dockerignore  .env.dev  Dockerfile  README.md
python/fastapi/fastapi-poetry/: Dockerfile  README.md  pyproject.toml  requirements.txt
react/: Dockerfile  package-lock.json  package.json
ruby/rails/: .dockerignore  .gitignore  Dockerfile  Gemfile  README.md
rust/: Cargo.toml  Dockerfile  README.md
rust/src/: main.rs
vue/: README.md  package-lock.json  package.json
(+22 files in other folders)
