[tool.poetry]
name = "fastapi-poetry"
version = "1.0.0"
description = ""
authors = []

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "0.124.0"
uvicorn = {extras = ["standard"], version = "0.38.0"}

[tool.poetry.group.dev.dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
